# mollusk

./: Cargo.toml  Makefile  README.md  compute_units.md
.github/workflows/: main.yml  publish.yml
bencher/: Cargo.toml
bencher/src/: lib.rs  result.rs
bencher/tests/: markdown.rs
cli/: Cargo.toml
cli/src/: main.rs  runner.rs
error/: Cargo.toml
error/src/: error.rs
fuzz/fixture/: Cargo.toml
fuzz/fixture-fd/: Cargo.toml
fuzz/fixture-fd/src/: context.rs  feature_set.rs  instr_account.rs  lib.rs
fuzz/fixture/proto/: compute_budget.proto
fuzz/fixture/src/: compute_budget.rs  context.rs  feature_set.rs  lib.rs
fuzz/fs/: Cargo.toml
harness/: Cargo.toml
harness/src/: account_store.rs  compile_accounts.rs  epoch_stake.rs  file.rs  instructions_sysvar.rs  lib.rs  program.rs  register_tracing.rs  result.rs  sysvar.rs
harness/src/fuzz/: firedancer.rs  mod.rs  mollusk.rs
harness/tests/: account_store.rs  bpf_program.rs  custom_syscall.rs  dump_fixture.rs  epoch_stake.rs  fd_test_vectors.rs  instructions_sysvar.rs  precompile.rs  register_tracing.rs  system_program.rs  transaction_instructions.rs
keys/: Cargo.toml
keys/src/: accounts.rs  keys.rs
programs/memo/: Cargo.toml
programs/memo/src/: lib.rs  memo.rs  memo_v1.rs
programs/token/: Cargo.toml
programs/token/src/: associated_token.rs  lib.rs  token.rs  token2022.rs
result/: Cargo.toml
result/src/: check.rs  compare.rs  config.rs  fuzz.rs  lib.rs  types.rs
scripts/: audit.sh  prepublish.sh
test-programs/custom-syscall/: Cargo.toml
test-programs/custom-syscall/src/: lib.rs
test-programs/instructions-sysvar/: Cargo.toml
test-programs/instructions-sysvar/src/: lib.rs
test-programs/noop-log/: Cargo.toml
test-programs/noop-log/src/: lib.rs
test-programs/primary/src/: lib.rs
