[workspace]
members = [
    "error",
    "fuzz/*",
    "harness",
    "keys",
    "programs/*",
    "result",
    "test-programs/*",
]
resolver = "2"

[workspace.package]
authors = ["Anza Technology Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/anza-xyz/mollusk"
readme = "README.md"
license-file = "LICENSE"
edition = "2021"
version = "0.7.1"

[workspace.dependencies]
agave-feature-set = "3"
agave-precompiles = "3"
agave-syscalls = "3"
ahash = "0"
bincode = "1"
bs58 = "0"
chrono = "0"
clap = "4"
criterion = "0"
ed25519-dalek = "=1"
libsecp256k1 = "0"
mollusk-svm = { path = "harness", version = "0" }
mollusk-svm-bencher = { path = "bencher", version = "0" }
mollusk-svm-cli = { path = "cli", version = "0" }
mollusk-svm-error = { path = "error", version = "0" }
mollusk-svm-fuzz-fixture = { path = "fuzz/fixture", version = "0" }
mollusk-svm-fuzz-fixture-firedancer = { path = "fuzz/fixture-fd", version = "0" }
mollusk-svm-fuzz-fs = { path = "fuzz/fs", version = "0" }
mollusk-svm-keys = { path = "keys", version = "0" }
mollusk-svm-programs-memo = { path = "programs/memo", version = "0" }
mollusk-svm-result = { path = "result", version = "0" }
mollusk-svm-programs-token = { path = "programs/token", version = "0" }
num-format = "0"
openssl = "0"
prost = "0"
prost-build = "0"
prost-types = "0"
rand0-7 = { package = "rand", version = "0" }
rayon = "1"
serde = "1"
serde_json = "1"
serde_yaml = "0"
serial_test = "2"
solana-account = "3"
solana-account-info = "3"
solana-bpf-loader-program = "3"
solana-clock = "3"
solana-compute-budget = "3"
solana-cpi = "3"
solana-ed25519-program = "3"
solana-epoch-rewards = "3"
solana-epoch-schedule = "3"
solana-hash = "4"
solana-instruction = "3"
solana-instruction-error = { version = "2", features = ["serde"] }
solana-keccak-hasher = { version = "3", features = ["sha3"] }
solana-loader-v3-interface = "6"
solana-loader-v4-interface = "3"
solana-loader-v4-program = "3"
solana-logger = "3"
solana-native-token = "3"
solana-precompile-error = "3"
solana-program-entrypoint = "3"
solana-program-error = "3"
solana-program-pack = "3"
solana-program-runtime = "3"
solana-pubkey = "4"
solana-rent = "3"
solana-sdk-ids = "3"
solana-secp256k1-program = "3"
solana-secp256r1-program = "3"
solana-slot-hashes = "3"
solana-stake-interface = "2"
solana-stake-program = "3"
solana-svm-callback = "3"
solana-svm-feature-set = "3"
solana-svm-log-collector = "3"
solana-svm-timings = "3"
solana-system-interface = "3"
solana-system-program = "3"
solana-sysvar = "3"
solana-sysvar-id = "3"
solana-transaction-context = "3"
spl-associated-token-account-interface = "2"
spl-token-interface = "2"
thiserror = "2"
tokio = "1"
which = "4"
