[workspace]
members = [
    "bencher",
    "cli",
    "error",
    "fuzz/*",
    "harness",
    "keys",
    "programs/*",
    "result",
    "test-programs/*",
]
resolver = "2"

[workspace.package]
authors = ["Anza Technology Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/anza-xyz/mollusk"
readme = "README.md"
license-file = "LICENSE"
edition = "2021"
version = "0.7.2"

[workspace.dependencies]
agave-feature-set = "3.1.0"
agave-precompiles = "3.1.0"
agave-syscalls = "3.1.0"
bincode = "1.3.3"
bs58 = "0.5.1"
chrono = "0.4.42"
clap = "4.5.51"
criterion = "0.7.0"
ed25519-dalek = "=1.0.1"
libsecp256k1 = "0.6.0"
mollusk-svm = { path = "harness", version = "0.7.2" }
mollusk-svm-bencher = { path = "bencher", version = "0.7.2" }
mollusk-svm-cli = { path = "cli", version = "0.7.2" }
mollusk-svm-error = { path = "error", version = "0.7.2" }
mollusk-svm-fuzz-fixture = { path = "fuzz/fixture", version = "0.7.2" }
mollusk-svm-fuzz-fixture-firedancer = { path = "fuzz/fixture-fd", version = "0.7.2" }
mollusk-svm-fuzz-fs = { path = "fuzz/fs", version = "0.7.2" }
mollusk-svm-keys = { path = "keys", version = "0.7.2" }
mollusk-svm-programs-memo = { path = "programs/memo", version = "0.7.2" }
mollusk-svm-result = { path = "result", version = "0.7.2" }
mollusk-svm-programs-token = { path = "programs/token", version = "0.7.2" }
num-format = "0.4.4"
openssl = "0.10.74"
prost = "0.9"
prost-build = "0.9"
prost-types = "0.9"
rand0-7 = { package = "rand", version = "0.7" }
rayon = "1.10.0"
serde = "1.0.203"
serde_json = "1.0.117"
serde_yaml = "0.9.34"
serial_test = "2.0"
solana-account = "3.2.0"
solana-account-info = "3.0"
solana-bpf-loader-program = "3.1.0"
solana-clock = "3.0"
solana-compute-budget = "3.1.0"
solana-cpi = "3.0"
solana-ed25519-program = "3.0"
solana-epoch-rewards = "3.0"
solana-epoch-schedule = "3.0"
solana-hash = "3.1.0"
solana-instruction = "3.0"
solana-instruction-error = { version = "2.0", features = ["serde"] }
solana-keccak-hasher = { version = "3.0", features = ["sha3"] }
solana-loader-v3-interface = "6.1.0"
solana-loader-v4-interface = "3.1.0"
solana-loader-v4-program = "3.1.0"
solana-logger = "3.0"
solana-native-token = "3.0"
solana-precompile-error = "3.0"
solana-program-entrypoint = "3.1.0"
solana-program-error = "3.0"
solana-program-pack = "3.0"
solana-program-runtime = "3.0"
solana-pubkey = "3.0"
solana-rent = "3.0"
solana-sdk-ids = "3.0"
solana-secp256k1-program = "3.0"
solana-secp256r1-program = "3.0"
solana-slot-hashes = "3.0"
solana-stake-interface = "2.0.1"
solana-stake-program = "3.1.0"
solana-svm-callback = "3.1.0"
solana-svm-log-collector = "3.1.0"
solana-svm-timings = "3.1.0"
solana-system-interface = "2.0"
solana-system-program = "3.1.0"
solana-sysvar = "3.0"
solana-sysvar-id = "3.0"
solana-transaction-context = "3.1.0"
spl-associated-token-account-interface = "2.0.0"
spl-token-interface = "2.0.0"
thiserror = "1.0.64"
tokio = "1.37.0"
which = "=4.4.0"
