[workspace]
members = [
    "error",
    "harness",
    "keys",
    "result",
]
resolver = "2"

[workspace.package]
authors = ["Anza Technology Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/anza-xyz/mollusk"
readme = "README.md"
license-file = "LICENSE"
edition = "2024"
version = "0.8.0"

[workspace.dependencies]
agave-feature-set = "3"
agave-syscalls = "3"
ahash = "0"
bincode = "1"
mollusk-svm = { path = "harness", version = "0" }
mollusk-svm-error = { path = "error", version = "0" }
mollusk-svm-keys = { path = "keys", version = "0" }
mollusk-svm-result = { path = "result", version = "0" }
solana-account = "3"
solana-bpf-loader-program = "3"
solana-clock = "3"
solana-compute-budget = "3"
solana-epoch-rewards = "3"
solana-epoch-schedule = "3"
solana-hash = "4"
solana-instruction = "3"
solana-loader-v4-program = "3"
solana-logger = "3"
solana-program-runtime = "3"
solana-pubkey = "4"
solana-rent = "3"
solana-sdk-ids = "3"
solana-slot-hashes = "3"
solana-stake-interface = "2"
solana-svm-callback = "3"
solana-svm-feature-set = "3"
solana-svm-log-collector = "3"
solana-svm-timings = "3"
solana-system-program = "3"
solana-sysvar = "3"
solana-sysvar-id = "3"
solana-transaction-context = "3"
solana-zk-elgamal-proof-program = "3"
thiserror = "2"
