[package]
name = "mollusk-svm"
description = "SVM program test harness."
documentation = "https://docs.rs/mollusk-svm"
authors = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
license-file ={ workspace = true }
edition = { workspace = true }
version = { workspace = true }

[features]
default = ["all-builtins"]
all-builtins = [
    "dep:solana-loader-v4-program",
    "dep:solana-zk-elgamal-proof-program",
]

[dependencies]
agave-feature-set = { workspace = true }
agave-syscalls = { workspace = true }
ahash = { workspace = true }
bincode = { workspace = true }
mollusk-svm-error = { workspace = true }
mollusk-svm-keys = { workspace = true }
mollusk-svm-result = { workspace = true }
solana-account = { workspace = true }
solana-bpf-loader-program = { workspace = true }
solana-clock = { workspace = true }
solana-compute-budget = { workspace = true, features = ["agave-unstable-api"] }
solana-epoch-rewards = { workspace = true }
solana-epoch-schedule = { workspace = true }
solana-hash = { workspace = true }
solana-instruction = { workspace = true }
solana-loader-v4-program = { workspace = true, features = ["agave-unstable-api"], optional = true }
solana-logger = { workspace = true }
solana-program-runtime = { workspace = true }
solana-pubkey = { workspace = true }
solana-rent = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-slot-hashes = { workspace = true }
solana-stake-interface = { workspace = true }
solana-svm-callback = { workspace = true }
solana-svm-feature-set = { workspace = true }
solana-svm-log-collector = { workspace = true }
solana-svm-timings = { workspace = true }
solana-system-program = { workspace = true, features = ["agave-unstable-api"] }
solana-sysvar = { workspace = true }
solana-sysvar-id = { workspace = true }
solana-transaction-context = { workspace = true, features = ["dev-context-only-utils"] }
solana-zk-elgamal-proof-program = { workspace = true, features = ["agave-unstable-api"], optional = true }
