[package]
name = "mollusk-svm-result"
description = "SVM program execution results and validation."
documentation = "https://docs.rs/mollusk-svm-result"
authors = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
license-file ={ workspace = true }
edition = { workspace = true }
version = { workspace = true }

[dependencies]
solana-instruction = { workspace = true }
