[package]
name = "mollusk-svm-result"
description = "SVM program execution results and validation."
documentation = "https://docs.rs/mollusk-svm-result"
authors = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
license-file ={ workspace = true }
edition = { workspace = true }
version = { workspace = true }

[dependencies]
mollusk-svm-fuzz-fixture = { workspace = true, optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
solana-account = { workspace = true }
solana-instruction = { workspace = true }
solana-message = { workspace = true, optional = true }
solana-program-error = { workspace = true }
solana-pubkey = { workspace = true }
solana-rent = { workspace = true }
solana-transaction-status-client-types = { workspace = true, optional = true }

[features]
default = []
fuzz = ["dep:mollusk-svm-fuzz-fixture"]
inner-instructions = ["dep:solana-message", "dep:solana-transaction-status-client-types"]
serde = ["dep:serde", "solana-pubkey/serde"]
