[package]
name = "mollusk-svm-programs-token"
description = "SVM program SPL Token."
documentation = "https://docs.rs/mollusk-svm-programs-token"
authors = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
license-file ={ workspace = true }
edition = { workspace = true }
version = { workspace = true }

[features]
default = ["token", "associated-token", "token-2022"]
token = []
associated-token = ["dep:spl-associated-token-account"]
token-2022 = []

[dependencies]
mollusk-svm = { workspace = true }
solana-account = { workspace = true }
solana-pubkey = { workspace = true }
solana-rent = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true, optional = true  }
